added google analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,5 @@
   <link href="{{ site.baseurl }}/css/bootstrap.css" rel="stylesheet">
   <link href="{{ site.baseurl }}/css/blog.css" rel="stylesheet">
   <script src="{{ site.baseurl }}/js/bootstrap.js"></script>
+  <script src="{{ site.baseurl }}/js/google-analytics.js"></script>
 </head>
