Adds update warning

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,6 @@
+<!-- REMOVE
 <div class="blog-masthead">
+-->
 	<!--
   <div class="container">
     <nav class="nav blog-nav">
@@ -7,6 +9,7 @@
     </nav>
   </div>
   -->
+  <!-- REMOVE
   <div class="container">
   	<nav class="nav blog-nav">
     	<li><a href="/" class="nav-link{% if page.url == '/' %} active{% endif %}">Home</a></li>
@@ -14,3 +17,4 @@
 		</nav>
   </div>
 </div>
+-->
